# SDRPlusPlus

./: .gitignore  .gitmodules  CMakeLists.txt  PACKAGING.md  build_and_package.bat  build_installer.bat  build_native.cmd  build_native.ps1  build_win.bat  build_win.ps1  create_root.bat  run_build_cmd.bat  sdrpp_installer.iss  update_root_dev.bat
core/backends/glfw/: backend.cpp
core/src/: command_args.cpp  core.cpp  version.h
decoder_modules/dvb_decoder/: CMakeLists.txt
misc_modules/discord_integration/discord-rpc/: CMakeLists.txt
sink_modules/audio_sink/: CMakeLists.txt
source_modules/audio_source/: CMakeLists.txt
source_modules/hackrf_source/src/: main.cpp
